Added section two of netflix clone on 27-5-23

--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
 
     </div>
 
+    <section class="first">
+        <div>
+            Enjoy on your TV
+            Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+        </div>
+
+        <div class="secImg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="imgvideo">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>
+        </div>
+
+        
+
+
+    </section>
+
 
 
 
